# MC_Assmt3

./: README.md
check/app/: build.gradle.kts
check/app/src/main/: AndroidManifest.xml
check/app/src/main/java/com/example/check/: MainActivity.kt
check/gradle/wrapper/: gradle-wrapper.properties
ques1/app/: build.gradle.kts
ques1/app/src/main/: AndroidManifest.xml
ques1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ques1/app/src/main/java/com/example/matrixcalculator/: MainActivity.kt  MatrixCalculator.kt
ques1/app/src/main/java/com/example/matrixcalculator/ui/theme/: Theme.kt
ques1/app/src/main/res/values/: themes.xml
ques1/gradle/wrapper/: gradle-wrapper.properties
ques2/app/: build.gradle.kts
ques2/app/src/main/: AndroidManifest.xml
ques2/app/src/main/java/com/example/myapplication/: MainActivity.kt
ques2/app/src/main/java/com/example/myapplication/ui/theme/: Theme.kt
ques2/gradle/: libs.versions.toml
ques2/gradle/wrapper/: gradle-wrapper.properties
